--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+ name: Docker Image CI
 
 on:
   push:
@@ -25,5 +25,13 @@ jobs:
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Finalizando login"
+
+    - name: Build Docker Image
+      run: |  
+        docker build -t joaquinoriglia/docker-graphql:0.0.2 .
+        
+    - name: Push Docker Image
+      run: |  
+        docker push joaquinoriglia/docker-graphql:0.0.2 .
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
