--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,11 +28,11 @@ jobs:
 
     - name: Build Docker Image
       run: |  
-        docker build -t joaquinoriglia/docker-graphql:0.0.3 .
+        docker build -t joaquinoriglia/docker-graphql:0.0.2 .
         
     - name: Push Docker Image
       run: |  
-        docker push joaquinoriglia/docker-graphql:0.0.3 .
+        docker push joaquinoriglia/docker-graphql:0.0.2
         
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
