--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,14 +17,23 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v5.4.0
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        version_format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}  
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }} 
+        NEW_VERSION: ${{ steps.version.outputs.version  }} 
       run: |  
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Finalizando login"
+        echo "New version: $NEW_VERSION"
 
     - name: Build Docker Image
       run: |  
