--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         major_pattern: "major:"
         minor_pattern: "feat:"
+        patch_pattern: "fix:"
         version_format: "${major}.${minor}.${patch}-prerelease${increment}"
       id: version
     - name: Docker Login
@@ -36,13 +37,17 @@ jobs:
         echo "New version: $NEW_VERSION"
 
     - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version  }} 
       run: |  
-        docker build -t joaquinoriglia/docker-graphql:0.0.2 .
+        docker build -t joaquinoriglia/docker-graphql:$NEW_VERSION .
         docker build -t joaquinoriglia/docker-graphql:latest .
         
     - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version  }} 
       run: |  
-        docker push joaquinoriglia/docker-graphql:0.0.2
+        docker push joaquinoriglia/docker-graphql:$NEW_VERSION
         docker push joaquinoriglia/docker-graphql:latest
         
     # - name: Build the Docker image
